--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -95,6 +95,7 @@
 %     $x\mathop{\&\&}y$, disjunction $x\mathop{\vert\vert}y$, ternary
 %     operator $x\mathop{?}y\mathop{:}z$.
 %   \item Exponentials: $\exp x$, $\ln x$, $x^y$.
+%   \item Integer factorial: $\operatorname{fact} x$.
 %   \item Trigonometry: $\sin x$, $\cos x$, $\tan x$, $\cot x$, $\sec
 %     x$, $\csc x$ expecting their arguments in radians, and
 %     $\operatorname{sind} x$, $\operatorname{cosd} x$,
