--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -250,7 +250,7 @@
 \group_begin:
   \cs_set:Npn \@@_tmp:w #1
     {
-      \str_if_eq:eeTF { \cs_meaning:N #1 } { \cs_to_str:N #1 }
+      \str_if_eq:eeTF { \cs_meaning:N #1 } { \token_to_str:N #1 }
         { #1 }
         {
           \cs_if_exist:NTF \tex_primitive:D
