Correct docs for \ior_get:NN
As discussed on the team list, we need something
dedicated for the terminal

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -164,15 +164,18 @@
 %
 % \subsection{Reading from files}
 %
-% \begin{function}[noTF, added = 2012-06-24, updated = 2019-02-17]{\ior_get:NN}
+% Reading from files and reading from the terminal are separate processes in
+% \pkg{expl3}. The functions \cs{ior_get:NN} and \cs{ior_str_get:NN}, and their
+% branching equivalents, are designed to work with files.
+%
+% \begin{function}[noTF, added = 2012-06-24, updated = 2019-03-23]{\ior_get:NN}
 %   \begin{syntax}
 %     \cs{ior_get:NN} \meta{stream} \meta{token list variable}
 %     \cs{ior_get:NNTF} \meta{stream} \meta{token list variable} \meta{true code} \meta{false code}
 %   \end{syntax}
 %   Function that reads one or more lines (until an equal number of left
 %   and right braces are found) from the input \meta{stream} and stores
-%   the result locally in the \meta{token list} variable. If the
-%   \meta{stream} is not open, input is requested from the terminal.
+%   the result locally in the \meta{token list} variable.
 %   The material read from the \meta{stream} is tokenized by \TeX{}
 %   according to the category codes and \tn{endlinechar} in force when
 %   the function is used.  Assuming normal settings, any lines which do
@@ -192,8 +195,8 @@
 %   \end{verbatim}
 %   Also notice that if multiple lines are read to match braces
 %   then the resulting token list can contain \cs{par} tokens.
-%   In the non-branching version, where the file is not found the \meta{tl var}
-%   is set to \cs{q_no_value}.
+%   In the non-branching version, where the \meta{stream} is not open
+%   the \meta{tl var} is set to \cs{q_no_value}.
 %   \begin{texnote}
 %     This protected macro is a wrapper around the \TeX{} primitive
 %     \tn{read}.  Regardless of settings, \TeX{} replaces trailing space
@@ -206,15 +209,14 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}[noTF, added = 2016-12-04, updated = 2019-02-17]
+% \begin{function}[noTF, added = 2016-12-04, updated = 2019-03-23]
 %   {\ior_str_get:NN}
 %   \begin{syntax}
 %     \cs{ior_str_get:NN} \meta{stream} \meta{token list variable}
 %     \cs{ior_str_get:NNTF} \meta{stream} \meta{token list variable} \meta{true code} \meta{false code}
 %   \end{syntax}
 %   Function that reads one line from the input \meta{stream} and stores
-%   the result locally in the \meta{token list} variable. If the
-%   \meta{stream} is not open, input is requested from the terminal.
+%   the result locally in the \meta{token list} variable.
 %   The material is read from the \meta{stream} as a series of tokens with
 %   category code $12$ (other), with the exception of space
 %   characters which are given category code $10$ (space).
@@ -228,8 +230,8 @@
 %   \end{verbatim}
 %   results in a token list |a b  c| with the letters |a|, |b|, and |c|
 %   having category code~12.
-%   In the non-branching version, where the file is not found the \meta{tl var}
-%   is set to \cs{q_no_value}.
+%   In the non-branching version, where the\meta{stream} is not open
+%   the \meta{tl var} is set to \cs{q_no_value}.
 %   \begin{texnote}
 %     This protected macro is a wrapper around the \eTeX{} primitive
 %     \tn{readline}.  Regardless of settings, \TeX{} removes trailing
