--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1014,6 +1014,36 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{variable}{\c_@@_term_ior}
+%   For reading without a prompt.
+%    \begin{macrocode}
+\int_const:Nn \c_@@_term_ior { -1 }
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}{\ior_get_term:nN, \ior_str_get_term:nN}
+% \begin{macro}{\@@_get_term:NnN}
+%   Getting from the terminal is better with pretty-printing.
+%    \begin{macrocode}
+\cs_new_protected:Npn \ior_get_term:nN #1#2
+  { \@@_get_term:NnN \@@_get:NN {#1} #2 }
+\cs_new_protected:Npn \ior_str_get_term:nN #1#2
+  { \@@_get_term:NnN \@@_str_get:NN {#1} #2 }
+\cs_new_protected:Npn \@@_get_term:NnN #1#2#3
+  {
+    \group_begin:
+      \tex_escapechar:D = -1 \scan_stop:
+      \tl_if_blank:nTF {#2}
+        { \exp_args:NNc #1 \c_@@_term_ior }
+        { \exp_args:NNc #1 \c_term_ior }
+          {#2}
+    \exp_args:NNNv \group_end:
+    \tl_set:Nn #3 {#2}
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 % \begin{macro}[EXP]{\ior_map_break:, \ior_map_break:n}
 %   Usual map breaking functions.
 %    \begin{macrocode}
