--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -415,6 +415,24 @@
 %   In other words this is a zero-width breaking space.
 % \end{function}
 %
+% \begin{function}[added = 2019-03-25]{\ior_get_term:nN, \ior_str_get_term:nN}
+%   \begin{syntax}
+%     \cs{ior_get_term:nN} \meta{prompt} \meta{token list variable}
+%   \end{syntax}
+%   Function that reads one or more lines (until an equal number of left
+%   and right braces are found) from the terminal and stores
+%   the result locally in the \meta{token list} variable. Tokenization
+%   occurs as described for \cs{ior_get:NN} or \cs{ior_str_get:NN}, respectively.
+%   When the \meta{prompt}
+%   is empty, \TeX{} will wait for input without any other indication:
+%   typically the programmer will have provided a suitable text using
+%   e.g.~\cs{ior_term:n}. Where the \meta{prompt} is given, it will appear
+%   in the terminal followed by an |=|., e.g.
+%   \begin{verbatim}
+%     prompt=
+%   \end{verbatim}
+% \end{function}
+%
 % \section{Additions to \pkg{l3flag}}
 %
 % \begin{function}[EXP, added = 2018-04-02]{\flag_raise_if_clear:n}
