[l3doc] fix type: add missing comma

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -439,7 +439,7 @@
 % \subsection{Wrapping lines in output}
 %
 % \begin{function}[added = 2012-06-28, updated = 2017-12-04]
-%   {\iow_wrap:nnnN \iow_wrap:nxnN}
+%   {\iow_wrap:nnnN, \iow_wrap:nxnN}
 %   \begin{syntax}
 %     \cs{iow_wrap:nnnN} \Arg{text} \Arg{run-on text} \Arg{set up} \meta{function}
 %   \end{syntax}
