[l3doc] fix type: add missing comma (continued)

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -78,7 +78,7 @@
 % \begin{function}[added = 2011-08-17, updated = 2019-01-21]
 %  {
 %    \coffin_set_eq:NN, \coffin_set_eq:Nc,
-%    \coffin_set_eq:cN, \coffin_set_eq:cc
+%    \coffin_set_eq:cN, \coffin_set_eq:cc,
 %    \coffin_gset_eq:NN, \coffin_gset_eq:Nc,
 %    \coffin_gset_eq:cN, \coffin_gset_eq:cc
 %  }
