fix typo: remove "module = "

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -888,7 +888,7 @@
 % specified, providing a tuple as an argument of any other operation
 % yields the \enquote{invalid operation} exception and a \nan{} result.
 %
-% \begin{function}[tested = m3fp-logic002, module = ]{?:}
+% \begin{function}[tested = m3fp-logic002]{?:}
 %   \begin{syntax}
 %     \cs{fp_eval:n} \{ \meta{operand_1} |?| \meta{operand_2} |:| \meta{operand_3} \}
 %   \end{syntax}
