fix typo: "pick up ... form" to "pick up ... from"

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -432,7 +432,7 @@ and all files in that bundle must be distributed together.
 % necessary to highlight it as much and you also don't need to check it
 % for, say, having a test function and having a documentation chunk
 % earlier in a \env{function} environment.  \pkg{l3doc} will pick up these
-% cases form the presence of |__| in the name, or you may force marking
+% cases from the presence of |__| in the name, or you may force marking
 % as internal by using |\begin{macro}[int]| to mark it as such. The margin
 % call-out is then printed in grey for such cases.
 %
