Split driver source into multiple files
One file per 'concept', more or less.

Should allow some to be marked as stable.

--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -2,7 +2,7 @@
 
 File: source3body.tex
 
-Copyright (C) 1990-2012,2014-2018 The LaTeX3 Project
+Copyright (C) 1990-2012,2014-2019 The LaTeX3 Project
 
 It may be distributed and/or modified under the conditions of the
 LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -483,6 +483,17 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
 \DocInput{l3unicode.dtx}
 \DocInput{l3candidates.dtx}
 \DocInput{l3drivers.dtx}
+\ExplSyntaxOn
+\clist_gput_right:Nn \g_docinput_clist
+  {
+    l3drivers-basics.dtx ,
+    l3drivers-color.dtx ,
+    l3drivers-box.dtx ,
+    l3drivers-draw.dtx ,
+    l3drivers-image.dtx ,
+    l3drivers-pdf.dtx
+  }
+\ExplSyntaxOff
 
 \ExplSyntaxOn
 \clist_gput_right:Nn \g_docinput_clist { l3deprecation.dtx }
