Refine statement on driver stablity
We are very 'close to the metal' here, so the
most sensible thing to do is to link to the next level up.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -79,11 +79,13 @@
 % concepts to be used corrected as they take \enquote{raw} arguments, similar
 % in format to those used by the underlying driver.
 %
-% The functions in this module should be regarded as experimental with
-% the following exceptions:
-% \begin{itemize}
-%   \item \dots
-% \end{itemize}
+% Given the close coupling of these functions to higher-level interfaces, at
+% present the functions given here may change if this is useful for higher-level
+% changes. However, equivalent \emph{functionality} will be provided for any
+% higher-level function which is itself stable. For example,
+% \cs{driver_box_use_rotate:Nn} is needed to implement the stable box rotation
+% functions. As such, even if \cs{driver_box_use_rotate:Nn} were to be removed,
+% a replacement would be provided.
 %
 % \section{Box clipping}
 %
@@ -167,7 +169,7 @@
 %
 % \section{Drawing}
 %
-% The drawing functions provided here are \emph{highly} experimental. They
+% These functions
 % are inspired heavily by the system layer of \pkg{pgf} (most have the
 % same interface as the same functions in the latter's \cs{pgfsys@\ldots}
 % namespace). They are intended to form the basis for higher level drawing
