Better quote-correction

--- a/l3kernel/l3drivers-image.dtx
+++ b/l3kernel/l3drivers-image.dtx
@@ -481,12 +481,12 @@
          dvisvgm:img~
          \dim_to_decimal:n { \l_image_ury_dim } ~
          \dim_to_decimal:n { \l_image_ury_dim } ~
-         \@@_image_include_bitmap_quote:w #1 " " \q_stop
+         \@@_image_include_bitmap_quote:w #1 " #1 " \q_stop
        }
   }
 \cs_new_eq:NN \@@_image_include_jpg:n \@@_image_include_png:n
 \cs_new:Npn \@@_image_include_bitmap_quote:w #1 " #2 " #3 \q_stop
-  { #1#2 }
+  { " #2 " }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
