Add PDF last link data access
Currently only for the easy case ...

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -484,6 +484,14 @@
 %   \meta{attributes} and point toward the \meta{target}.
 % \end{function}
 %
+% \begin{function}[EXP, added = 2019-04-09]{\driver_link_last:}
+%   \begin{syntax}
+%     \cs{driver_link_last:}
+%   \end{syntax}
+%   Expands to the object reference 
+% \end{function}
+%
+%
 % \subsection{PDF Objects}
 %
 % Objects are used to provide a range of data structures in a PDF. At the
