Keep 'pdf' in link function names
Although we can think about dvisvgm here, basically
these are PDF features. Keeps the source file
consistent: everything is 'pdf...'.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -474,19 +474,19 @@
 % \subsection{PDF Annotations}
 %
 % \begin{function}[added = 2019-04-09]
-%   {\driver_link_begin_goto:nn, \driver_link_begin_user:nn, \driver_link_end:}
+%   {\driver_pdf_link_begin_goto:nn, \driver_pdf_link_begin_user:nn, \driver_pdf_link_end:}
 %   \begin{syntax}
-%     \cs{driver_link_begin_user:nn} \Arg{attributes} \Arg{target}
+%     \cs{driver_pdf_link_begin_user:nn} \Arg{attributes} \Arg{target}
 %     \meta{content}
-%     \cs{driver_link_end:}
+%     \cs{driver_pdf_link_end:}
 %   \end{syntax}
 %   Creates a link of the \meta{type} |goto| or |user| with the given
 %   \meta{attributes} and point toward the \meta{target}.
 % \end{function}
 %
-% \begin{function}[EXP, added = 2019-04-09]{\driver_link_last:}
+% \begin{function}[EXP, added = 2019-04-09]{\driver_pdf_link_last:}
 %   \begin{syntax}
-%     \cs{driver_link_last:}
+%     \cs{driver_pdf_link_last:}
 %   \end{syntax}
 %   Expands to the object reference 
 % \end{function}
