--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -196,15 +196,15 @@
 %
 % \subsubsection{Annotations}
 %
-% \begin{macro}{\driver_pdf_link_begin_goto:nn, \driver_pdf_link_begin_user:nn}
-% \begin{macro}{\@@_pdf_link_begin:nnn}
+% \begin{macro}{\driver_pdf_link_goto:nnn, \driver_pdf_link_user:nnn}
+% \begin{macro}{\@@_pdf_link:nnnn}
 %   Links are all created using the same internals.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_pdf_link_begin_goto:nn #1#2
-  { \@@_pdf_link_begin:nnn {#1} { goto~name } {#2} }
-\cs_new_protected:Npn \driver_pdf_link_begin_user:nn #1#2
-  { \@@_pdf_link_begin:nnn {#1} { user } {#2} }
-\cs_new_protected:Npx \@@_pdf_link_begin:nnn #1#2#3
+\cs_new_protected:Npn \driver_pdf_link_goto:nnn #1#2#3
+  { \@@_pdf_link_begin:nnnn {#1} { goto~name } {#2} {#3} }
+\cs_new_protected:Npn \driver_pdf_link_user:nn #1#2#3
+  { \@@_pdf_link_begin:nnnn {#1} { user } {#2} {#3} }
+\cs_new_protected:Npx \@@_pdf_link_begin:nnnn #1#2#3#4
   {
     \cs_if_exist:NTF \tex_pdfextension:D
       { \tex_pdfextension:D startlink ~ }
@@ -212,21 +212,13 @@
       attr {#1}
       \exp_not:N \tl_if_blank:nF {#2}
         { ~ #2 {#3} }
-  }
-%    \end{macrocode}
-% \end{macro}
-% \end{macro}
-%
-% \begin{macro}{\driver_pdf_link_end:}
-%   Ending a link is easy.
-%    \begin{macrocode}
-\cs_new_protected:Npx \driver_pdf_link_end:
-  {
+    #4
     \cs_if_exist:NTF \tex_pdfextension:D
-      { \tex_pdfextension:D endlink }
+      { \tex_pdfextension:D endlink \scan_stop: }
       { \tex_pdfendlink:D }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\driver_pdf_link_last:}
@@ -386,14 +378,14 @@
 %
 % \subsubsection{Annotations}
 %
-% \begin{macro}{\driver_pdf_link_begin_goto:nn, \driver_pdf_link_begin_user:nn}
-% \begin{macro}{\@@_pdf_link_begin:nnn}
+% \begin{macro}{\driver_pdf_link_goto:nnn, \driver_pdf_link_user:nnn}
+% \begin{macro}{\@@_pdf_link_begin:nnnn}
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_pdf_link_begin_goto:nn #1#2
-  { \@@_pdf_startlink:nnn {#1} { /GoTo } {#2} }
-\cs_new_protected:Npn \driver_pdf_link_begin_user:nn #1#2
-  { \@@_pdf_startlink:nnn {#1} { } {#2} }
-\cs_new_protected:Npn \@@_pdf_link_begin:nnn #1#2#3
+\cs_new_protected:Npn \driver_pdf_link_goto:nnn #1#2#3
+  { \@@_pdf_startlink:nnn {#1} { /GoTo } {#2} {#3} }
+\cs_new_protected:Npn \driver_pdf_link_user:nnn #1#2#3
+  { \@@_pdf_startlink:nnn {#1} { } {#2} {#3} }
+\cs_new_protected:Npn \@@_pdf_link_begin:nnnn #1#2#3#4
   {
     \@@_pdf:n
       {
@@ -404,16 +396,11 @@
            #1 ~ #2 ~ #3
          >>
       }
+    #4
+    \@@_pdf:n { eann }
   }
 %    \end{macrocode}
 % \end{macro}
-% \end{macro}
-%
-% \begin{macro}{\driver_pdf_link_end:}
-%    \begin{macrocode}
-\cs_new_protected:Npx \driver_pdf_link_end:
-  { \@@_pdf:n { eann } }
-%    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{\driver_pdf_link_last:}
