--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -473,15 +473,14 @@
 %
 % \subsection{PDF Annotations}
 %
-% \begin{function}[added = 2019-04-09]
-%   {\driver_pdf_link_begin_goto:nn, \driver_pdf_link_begin_user:nn, \driver_pdf_link_end:}
+% \begin{function}[added = 2019-04-10]
+%   {\driver_pdf_link_goto:nnn, \driver_pdf_link_user:nnn}
 %   \begin{syntax}
-%     \cs{driver_pdf_link_begin_user:nn} \Arg{attributes} \Arg{target}
-%     \meta{content}
-%     \cs{driver_pdf_link_end:}
+%     \cs{driver_pdf_link_user:nnn} \Arg{attributes} \Arg{target} \Arg{content}
 %   \end{syntax}
 %   Creates a link of the \meta{type} |goto| or |user| with the given
-%   \meta{attributes} and point toward the \meta{target}.
+%   \meta{attributes}, points toward the \meta{target} and surround the
+%   \TeX{} \meta{content}.
 % \end{function}
 %
 % \begin{function}[EXP, added = 2019-04-09]{\driver_pdf_link_last:}
@@ -490,7 +489,6 @@
 %   \end{syntax}
 %   Expands to the object reference 
 % \end{function}
-%
 %
 % \subsection{PDF Objects}
 %
