Correct an internal name

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -637,10 +637,10 @@
 % \begin{macro}{\@@_pdf_link_begin:nnnn}
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_pdf_link_goto:nnn #1#2#3
-  { \@@_pdf_startlink:nnn {#1} { /GoTo } {#2} {#3} }
+  { \@@_pdf_link:nnnn {#1} { /GoTo } {#2} {#3} }
 \cs_new_protected:Npn \driver_pdf_link_user:nnn #1#2#3
-  { \@@_pdf_startlink:nnn {#1} { } {#2} {#3} }
-\cs_new_protected:Npn \@@_pdf_link_begin:nnnn #1#2#3#4
+  { \@@_pdf_link:nnnn {#1} { } {#2} {#3} }
+\cs_new_protected:Npn \@@_pdf_link:nnnn #1#2#3#4
   {
     \@@_pdf:n
       {
