Slightly clearer names for PostScript functions
The short names look great .. until we want all of the
stuff to break dvips hyperlinks. Also, they likely should
be more organised.

--- a/l3kernel/l3drivers-color.dtx
+++ b/l3kernel/l3drivers-color.dtx
@@ -117,6 +117,7 @@
 % \begin{macro}{\driver_color_spot:nn}
 % \begin{macro}{\@@_color_select:n, \@@_color_select:x}
 % \begin{macro}{\@@_color_reset:}
+% \begin{macro}{driver.fc}
 %    Push the data to the stack. In the case of \texttt{dvips} also reset the
 %    drawing fill color in raw PostScript.
 %    \begin{macrocode}
@@ -142,7 +143,7 @@
   {
     \@@_literal:n { color~push~ #1 }
 %<*dvips>
-    \@@_literal_postscript:n { /l3fc~{ }~def }
+    \@@_literal_postscript:n { /driver.fc~{ }~def }
 %</dvips>
     \group_insert_after:N \@@_color_reset:
   }
@@ -150,6 +151,7 @@
 \cs_new_protected:Npn \@@_color_reset:
   { \@@_literal:n { color~pop } }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
