--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -182,6 +182,7 @@
 % \end{variable}
 %
 % \begin{macro}{\driver_pdf_annotation:nnnn}
+% \begin{macro}{driver.llx, driver.lly, driver.urx, driver.ury}
 %   Annotations are objects, but we track them separately. Notably, they are
 %   not in the object data lists. Here, to get the co-ordinates of the
 %   annotation, we need to have the data collected at the PostScript level.
@@ -203,8 +204,8 @@
                   \@@_literal:n
                     {
                       ps: currentpoint ~
-                      /l3lly ~ exch ~ def ~
-                      /l3llx ~ exch ~ def
+                      /driver.lly ~ exch ~ def ~
+                      /driver.llx ~ exch ~ def
                     }
                 }
             }
@@ -216,8 +217,8 @@
                   \@@_literal:n
                     {
                       ps: currentpoint ~
-                      /l3ury ~ exch ~ def ~
-                      /l3urx ~ exch ~ def
+                      /driver.ury ~ exch ~ def ~
+                      /driver.urx ~ exch ~ def
                     }
                 }
             }
@@ -229,12 +230,13 @@
       {
         ps:
           mark ~ /_objdef ~ { l3obj \int_use:N \g_@@_pdf_object_int }
-          /Rect ~ [ l3llx ~ l3lly ~ l3urx  ~ l3ury ]
+          /Rect ~ [ driver.llx ~ driver.lly ~ driver.urx ~ driver.ury ]
           #4
           /ANN ~ pdfmark
       }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\driver_pdf_annotation_last:}
