Keep PostScript changes in SDict

--- a/l3kernel/l3drivers-basics.dtx
+++ b/l3kernel/l3drivers-basics.dtx
@@ -135,6 +135,17 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\@@_postscript:n, \@@_postscript:x}
+%   PostScript data that does have positioning, and also applying
+%   a shift to |SDict| (which is not done automatically by
+%   |ps:| or |ps::|, in contrast to |!| or |"|).
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_postscript:n #1
+  { \@@_literal:n { ps: SDict ~ begin ~ #1 ~ end } }
+\cs_generate_variant:Nn \@@_postscript:n { x }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{\@@_align_currentpoint_begin:, \@@_align_currentpoint_end:}
 %   In \texttt{dvips} there is no build-in saving of the current
 %   position, and so some additional PostScript is required to set up the
