--- a/l3kernel/l3drivers-color.dtx
+++ b/l3kernel/l3drivers-color.dtx
@@ -143,7 +143,7 @@
   {
     \@@_literal:n { color~push~ #1 }
 %<*dvips>
-    \@@_literal_postscript:n { /driver.fc~{ }~def }
+    \@@_postscript:n { /driver.fc~{ }~def }
 %</dvips>
     \group_insert_after:N \@@_color_reset:
   }
