--- a/l3kernel/l3drivers-draw.dtx
+++ b/l3kernel/l3drivers-draw.dtx
@@ -94,7 +94,7 @@
   {
     \@@_literal:n { ps::[begin] }
     \@@_draw_literal:n { @beginspecial }
-    \@@_draw_literal:n { /driver.fc~{ }~def }
+    \@@_darw_literal:n { SDict ~ begin ~ /driver.fc ~ { } ~ def ~ end }
   }
 \cs_new_protected:Npn \driver_draw_end:
   {
@@ -391,7 +391,7 @@
       { rgb ~ \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} }
   }
 \cs_new_protected:Npn \@@_draw_color_fill:n #1
-  { \@@_draw_literal:n { /driver.fc ~ { #1 } ~ def } }
+  { \@@_postscript:n { SDict ~ begin ~ /driver.fc ~ { #1 } ~ def ~ end } }
 \cs_generate_variant:Nn \@@_draw_color_fill:n { x }
 \cs_new_protected:Npn \@@_draw_color_stroke:n #1
   {
