--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -107,7 +107,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_pdf_object_write:nn #1#2
   {
-    \@@_literal_postscript:x
+    \@@_postscript:x
       {
         mark ~ /_objdef ~ \driver_pdf_object_ref:n {#1} ~
         /type
@@ -127,7 +127,7 @@
   }
 \cs_new_protected:Npn \@@_pdf_object_write_array:nn #1#2
   {
-    \@@_literal_postscript:x
+    \@@_postscript:x
       {
         mark ~ \driver_pdf_object_ref:n {#1} ~
           [ ~ \exp_not:n {#2} ~ ] ~ /PUTINTERVAL ~ pdfmark
@@ -135,7 +135,7 @@
   }
 \cs_new_protected:Npn \@@_pdf_object_write_dict:nn #1#2
   {
-    \@@_literal_postscript:x
+    \@@_postscript:x
       {
         mark ~ \driver_pdf_object_ref:n {#1} ~
           << ~ \exp_not:n {#2} ~ >> ~ /PUT ~ pdfmark
@@ -150,7 +150,7 @@
   }
 \cs_new_protected:Npn \@@_pdf_object_write_stream:nnn #1#2#3
   {
-    \@@_literal_postscript:n
+    \@@_postscript:n
       {
         [nobreak] ~
         mark ~ #1 ~ ( #3 ) ~ /PUT ~ pdfmark ~
@@ -201,9 +201,9 @@
             {
               \hbox_overlap_right:n
                 {
-                  \@@_literal:n
+                  \@@_postscript:n
                     {
-                      ps: currentpoint ~
+                      currentpoint ~
                       /driver.lly ~ exch ~ def ~
                       /driver.llx ~ exch ~ def
                     }
@@ -214,9 +214,9 @@
               \hbox_overlap_right:n
                 {
                   \tex_kern:D \dim_eval:n {#1} \scan_stop:
-                  \@@_literal:n
+                  \@@_postscript:n
                     {
-                      ps: currentpoint ~
+                      currentpoint ~
                       /driver.ury ~ exch ~ def ~
                       /driver.urx ~ exch ~ def
                     }
@@ -226,9 +226,8 @@
       \box_set_ht:Nn \l_@@_tmp_box { 0pt }
       \box_use_drop:N \l_@@_tmp_box
     \group_end:
-    \@@_literal:n
+    \@@_postscript:n
       {
-        ps:
           mark ~ /_objdef ~ { l3obj \int_use:N \g_@@_pdf_object_int }
           /Rect ~ [ driver.llx ~ driver.lly ~ driver.urx ~ driver.ury ]
           #4
