Some cosmetic spaces
Make debugging a little easier

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -247,9 +247,9 @@
     \group_end:
     \@@_postscript:x
       {
-          mark ~ /_objdef ~ { driver.obj \int_use:N \g_@@_pdf_object_int }
-          /Rect ~ [ driver.llx ~ driver.lly ~ driver.urx ~ driver.ury ]
-          #4
+          mark ~ /_objdef ~ { driver.obj \int_use:N \g_@@_pdf_object_int } ~
+          /Rect ~ [ driver.llx ~ driver.lly ~ driver.urx ~ driver.ury ] ~
+          #4 ~
           /ANN ~ pdfmark
       }
   }
