Setting for PDF version
At present, all the major version stuff is a no-op ...

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -334,9 +334,19 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\driver_pdf_version_minor:}
+% \begin{macro}
+%   {\driver_pdf_version_major_gset:n, \driver_pdf_version_minor_gset:n}
 %   Data not available!
 %    \begin{macrocode}
+\cs_new_protected:Npn \driver_pdf_version_major_gset:n #1 { }
+\cs_new_protected:Npn \driver_pdf_version_minor_gset:n #1 { }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\driver_pdf_version_major:, \driver_pdf_version_minor:}
+%   Data not available!
+%    \begin{macrocode}
+\cs_new:Npn \driver_pdf_version_major: { -1 }
 \cs_new:Npn \driver_pdf_version_minor: { -1 }
 %    \end{macrocode}
 % \end{macro}
@@ -545,10 +555,28 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\driver_pdf_version_minor:}
+% \begin{macro}
+%   {\driver_pdf_version_major_gset:n, \driver_pdf_version_minor_gset:n}
+%   At present, we don't have a primitive for the major version!
 %    \begin{macrocode}
+\cs_new_protected:Npn \driver_pdf_version_major_gset:n #1 { }
+\cs_new_protected:Npx \driver_pdf_version_minor_gset:n #1
+  {
+    \cs_if_exist:NTF \tex_pdfminorversion:D
+      { \exp_not:N \tex_pdfminorversion:D }
+      { \tex_pdfvariable:D minorversion }
+        \exp_not:N \int_eval:n {#1} \scan_stop:
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\driver_pdf_version_major:, \driver_pdf_version_minor:}
+%   At present, we don't have a primitive for the major version!
+%    \begin{macrocode}
+\cs_new:Npx \driver_pdf_version_major: { 1 }
 \cs_new:Npx \driver_pdf_version_minor:
   {
+    \exp_not:N \tex_the:D
     \cs_if_exist:NTF \tex_pdfminorversion:D
       { \exp_not:N \tex_pdfminorversion:D }
       { \tex_pdfvariable:D minorversion }
@@ -741,9 +769,26 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\driver_pdf_version_minor:}
+% \begin{macro}
+%   {\driver_pdf_version_major_gset:n, \driver_pdf_version_minor_gset:n}
 %   We start with the assumption that the default is active.
 %    \begin{macrocode}
+\cs_new_protected:Npn \driver_pdf_version_major:n #1
+  {
+    \cs_gset:Npx \driver_pdf_version_major: { \int_eval:n {#1} }
+  }
+\cs_new_protected:Npn \driver_pdf_version_minor:n #1
+  {
+    \cs_gset:Npx \driver_pdf_version_minor: { \int_eval:n {#1} }
+    \@@_literal:x { dvipdfmx:config~V~ \driver_pdf_version_minor: }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\driver_pdf_version_major:, \driver_pdf_version_minor:}
+%   We start with the assumption that the default is active.
+%    \begin{macrocode}
+\cs_new:Npn \driver_pdf_version_major: { 1 }
 \cs_new:Npn \driver_pdf_version_minor: { 5 }
 %    \end{macrocode}
 % \end{macro}
@@ -786,9 +831,19 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\driver_pdf_version_minor:}
+% \begin{macro}
+%   {\driver_pdf_version_major_gset:n, \driver_pdf_version_minor_gset:n}
 %   Data not available!
 %    \begin{macrocode}
+\cs_new_protected:Npn \driver_pdf_version_major_gset:n #1 { }
+\cs_new_protected:Npn \driver_pdf_version_minor_gset:n #1 { }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\driver_pdf_version_major:, \driver_pdf_version_minor:}
+%   Data not available!
+%    \begin{macrocode}
+\cs_new:Npn \driver_pdf_version_major: { -1 }
 \cs_new:Npn \driver_pdf_version_minor: { -1 }
 %    \end{macrocode}
 % \end{macro}
