--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -573,13 +573,26 @@
 %   be set only once.
 % \end{function}
 %
-% \begin{function}[EXP, added = 2019-04-09]{\driver_pdf_version_minor:}
+% \begin{function}[EXP, added = 2019-04-11]
+%   {\driver_pdf_version_major:, \driver_pdf_version_minor:}
 %   \begin{syntax}
+%     \cs{driver_pdf_version_major:}
 %     \cs{driver_pdf_version_minor:}
 %   \end{syntax}
-%   Expands to the current value of the minor version of PDF being created, a
-%   non-negative integer. Where a value is not available at the \TeX{} run
-%   level, the result is $-1$.
+%   Expands to the current value of the major or minor version of PDF being
+%   created, a non-negative integer. Where a value is not available at the
+%   \TeX{} run level, the result is $-1$. (This is necessary as the minor
+%   version may be $0$.)
+% \end{function}
+%
+% \begin{function}[EXP, added = 2019-04-11]
+%   {\driver_pdf_version_major_gset:n, \driver_pdf_version_minor_gset:n}
+%   \begin{syntax}
+%     \cs{driver_pdf_version_major_gset:n} \arg{integer}
+%     \cs{driver_pdf_version_minor_gset:n} \arg{integer}
+%   \end{syntax}
+%   Sets the PDF version as specified: the allowable range is not checked
+%   at this level.
 % \end{function}
 %
 % \end{documentation}
