Wrong sort of \Arg

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -588,8 +588,8 @@
 % \begin{function}[EXP, added = 2019-04-11]
 %   {\driver_pdf_version_major_gset:n, \driver_pdf_version_minor_gset:n}
 %   \begin{syntax}
-%     \cs{driver_pdf_version_major_gset:n} \arg{integer}
-%     \cs{driver_pdf_version_minor_gset:n} \arg{integer}
+%     \cs{driver_pdf_version_major_gset:n} \Arg{integer}
+%     \cs{driver_pdf_version_minor_gset:n} \Arg{integer}
 %   \end{syntax}
 %   Sets the PDF version as specified: the allowable range is not checked
 %   at this level.
