--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -615,17 +615,21 @@
       {
         \int_compare:nNnT \tex_luatexversion:D > { 106 }
           {
-            \tex_pdfvariable:D majorversion
+            \exp_not:N \tex_global:D \tex_pdfvariable:D majorversion
               \exp_not:N \int_eval:n {#1} \scan_stop:
           }
       }
       {
         \cs_if_exist:NT \tex_pdfmajorversion:D
-          { \tex_pdfmajorversion:D \exp_not:N \int_eval:n {#1} \scan_stop: }
+          {
+            \exp_not:N \tex_global:D \tex_pdfmajorversion:D
+              \exp_not:N \int_eval:n {#1} \scan_stop:
+          }
       }
   }
 \cs_new_protected:Npx \driver_pdf_version_minor_gset:n #1
   {
+    \exp_not:N \tex_global:D
     \cs_if_exist:NTF \tex_pdfminorversion:D
       { \exp_not:N \tex_pdfminorversion:D }
       { \tex_pdfvariable:D minorversion }
