Correct PostScript functions

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -327,12 +327,12 @@
     \hbox_set:Nn \l_@@_pdf_content_box {#4}
     \@@_pdf_link_minima:
     \box_move_down:nn { \box_dp:N \l_@@_pdf_content_box }
-      { \hbox:n { \@@_postscript:n { driver.annotation.ll } } }
+      { \hbox:n { \@@_postscript:n { driver.link.ll } } }
     \box_use:N \l_@@_pdf_content_box
     \box_move_up:nn { \box_ht:N \l_@@_pdf_content_box }
       {
         \hbox:n
-          { \@@_postscript:n { driver.annotation.ur } }
+          { \@@_postscript:n { driver.link.ur } }
       }
     \int_gincr:N \g_@@_pdf_object_int
     \int_gset_eq:NN \g_@@_pdf_link_int \g_@@_pdf_object_int
